# memailsystem

./: CMakeLists.txt  README.md  emailconfig.h  memailconfig.cpp  memailconfig.h  memailsystem.cpp  memailsystem.doxyfile  memailsystem.h  memailsystem.pri
example/: main.cpp
example/helloworld/: CMakeLists.txt  main.cpp  memailsystem.pro
example/sendmail/: CMakeLists.txt  README.md  main.cpp  sendmail.pro
